# genesis-cli

./: .gitignore  ECOSYSTEM_DOCTRINE.md  Summary.md  changelog.md  config.py  contributing.md  exceptions.py  init.py  license.txt  logging.py  main.py  makefile  pyproject.toml  readme.md  utils.py  validators.py
.github/: mkdocs.yml  precommit.yaml
.github/workflow/: ci.yml
commands/: init.py  utils.py
scripts/: dev.py
tests/: test_config.py  test_conftest.py  test_exceptions.py  test_utils.py  test_validators.py  tests_cli.py
ui/: console.py  init.py
